fixed memory, optimized, added cpp and cleaned up repository

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,16 @@
-__pycache__/**
-bin/**
-include/**
-lib/**
+**/__pycache__
+bin
+include
+lib
 lib64
-model_output/**
-share/**
-unlabeled2017/**
-unlabeled2017.zip
-pyvenv.cfg
+output
+share
+unlabeled2017
+*.cfg
+*.txt
+!src/cpp/CMakeLists.txt
+!src/python/requirements.txt
+!results_net_size.txt
+!results_size.txt
+*.png
+src/cpp/build/
