--- a/src/python/Dockerfile
+++ b/src/python/Dockerfile
@@ -5,7 +5,7 @@ RUN python -m venv ${VIRTUAL_ENV}
 ENV PATH="${VIRTUAL_ENV}/bin:$PATH"
 
 COPY requirements.txt .
-#RUN apt-get update && apt-get install ffmpeg libsm6 libxext6  -y
+RUN apt-get update && apt-get install ffmpeg libsm6 libxext6  -y
 RUN pip install -r requirements.txt
 
 #RUN mkdir output
