--- a/src/cpp/CMakeLists.txt
+++ b/src/cpp/CMakeLists.txt
@@ -1,12 +1,12 @@
 cmake_minimum_required(VERSION 3.16 FATAL_ERROR)
 
-list(APPEND CMAKE_PREFIX_PATH "/home/luber90/libtorch")
+list(APPEND CMAKE_PREFIX_PATH "/libtorch")
 project(cmag CXX CUDA)
 
 find_package(Torch REQUIRED)
 find_package(OpenCV REQUIRED)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${TORCH_CXX_FLAGS} ${OPENCV_CXX_FLAGS}")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${TORCH_CXX_FLAGS} ${OPENCV_CXX_FLAGS} -pthread -lffi")
 
 add_executable(networkc main.cpp unet.cpp)
 target_link_libraries(networkc ${OpenCV_LIBS} ${TORCH_LIBRARIES})
